# uv_base

./: CMakeLists.txt  Readme.md  package.xml
build_isolated/: catkin_make_isolated.cache
config/drone-configs/: config.yaml  drone_base.rviz
config/neural_net/: 2020-12-10-22-19-07_n2_ckpt.h5  config.py  const.py  data_augmentation.py  drive_data.py  drive_run.py  drive_test.py  drive_train.py  image_converter.py  image_process.py  imagecropping.py  net_model.py  net_model_resnet.py  salient.py  test.py  test_salient_features.py  train.py  txt2csv.py
config/neural_net/not_used/: MODEL_RUN_MCITY.py  MODEL_RUN_TRACK.py  net_model_original (copy).py
config/neural_net/pretrained_weights/Jkwon_Shobhit_1/: 2019-02-28-17-31-47.json
config/neural_net/pretrained_weights/MirNet_C_4/: 2019-02-28-17-31-47.json
config/neural_net/pretrained_weights/MirNet_L_5/: 2019-02-28-17-31-47.json
config/neural_net/pretrained_weights/Nvidia_2/: 2019-02-28-17-31-47.json
config/neural_net/pretrained_weights/Transfer_Learning_ResNet_3/: 2019-04-29-20-07-40.json
config/posix-configs/SITL/: README.md
config/posix-configs/models/My_Cylinder/: model.config  model.sdf
config/posix-configs/models/Net_Down/: model.config
config/posix-configs/models/Net_Top/: model.config  model.sdf
config/posix-configs/models/barrier_blue/: model.config
config/posix-configs/models/base_drone/: model.config
config/posix-configs/models/end/: model.config
config/posix-configs/models/evgp/: evgp.stl
config/posix-configs/models/evgp copy/: model.sdf
config/posix-configs/models/iitp_drone/: model.config
config/posix-configs/models/man/: model.config
config/posix-configs/models/man2/: model.sdf
config/posix-configs/models/my_ceiling/: model.sdf
config/posix-configs/models/my_tree/: model.config  model.sdf
config/posix-configs/models/ouster/: model.sdf
config/posix-configs/models/rover/: model.config  rover.sdf
config/posix-configs/models/rover_Gokart/: rover.sdf
config/posix-configs/models/rover_gokart/: model.config  rover.sdf  rover.urdf
config/posix-configs/models/start/: model.config  model.sdf
config/posix-configs/worlds/: empty.world  empty_sky.world  evgp.world  iitp_noceiling.world  iitp_v2.world  iitp_v5.world  iitp_v6.world  rover.world  rover_follow.world
config/posix-configs/worlds/evgp/: model.config
config/uv-configs/: config.yaml
config/uv-configs/rviz/: e2e.rviz  uv.rviz  uv_navigation.rviz
devel_isolated/: _setup_util.py  setup.sh
include/: vehicle.h
launch/: SITL_drone_base.launch  SITL_rover_base.launch  amcl.launch  data_collection.launch  drone_base.launch  drone_base_nomapping.launch  drone_base_nomapping_2d.launch  iitp.md  mavros_posix_sitl.launch  move_base.launch  px4_config_drone_base.yaml  px4_pluginlists_drone_base.yaml  rover_base.launch  rover_base_apm.launch  rover_base_joy.launch  rover_base_mapping.launch  rover_base_rviz.launch  rover_base_with_pixhawk.launch  rover_navigation.launch  slam_rviz.launch  vehicle.launch
launch/mavros/: mavros_px4.launch  px4_config.yaml
launch/mavros_launch/: px4.launch  px4_config.yaml  px4_config_map.yaml  px4_map.launch
launch/sim_launch/: rover_posix_sitl.launch
maps/: cartographer_map.yaml
models/Net_Down/: model.sdf
models/Net_Down/materials/: net_down.dae
models/Net_Top/materials/: net_top.dae
models/barrier_blue/: model.sdf
models/barrier_white/: model.config  model.sdf
models/base_drone/urdf/: base_drone.xacro  multirotor_base.xacro
models/cylinderset_iitp/: model.config  model.sdf
models/end/: model.sdf
models/end/materials/scripts/: end.material
models/evgp/evgp/: model.sdf
models/iitp_drone/urdf/: iitp_drone.xacro
models/man/: model.sdf
models/man2/: model.config
models/my_ceiling/: model.config
models/my_ground_plane/: model.sdf
models/my_ground_plane/materials/scripts_30/: my_ground_plane.material
models/rover/: model.sdf
models/rover/urdf/: base_rover.xacro  component_snippets.xacro  multirotor_base copy.xacro  multirotor_base.xacro  rover.xacro
models/start/materials/scripts/: start.material
msg/: Control.msg
param/: costmap_common_params.yaml  local_costmap_params.yaml  teb_local_planner_params.yaml
src/: JoystickControl.cpp  RoverPositionControl.md  data_collection  depthcamera_link_tf_pub.cpp  joystick.cpp  joystick_control  main.cpp  map.cpp  odometry_tf_pub.cpp  roverpositioncontrol.cpp  run_neural  sensor.cpp  vehicle.cpp
srv/: srvGoToVehicle.srv  srvMultiSetRawLocal.srv  srvMultiSetVelLocal.srv  srvMultiSetpointGlobal.srv  srvMultiSetpointLocal.srv
worlds/: evgp.world  human_v1.world  human_v2.world  iitp.world  iitp_noceiling_v1.world  iitp_noceiling_v2.world  iitp_noceiling_v3.world  iitp_noceiling_v4.world  iitp_noceiling_v5.world  iitp_noceiling_v6.world  iitp_v1.world  iitp_v3.world  iitp_v4.world
worlds/evgp/: scribner barrier spec
(+16 files in other folders)
