<?xml version="1.0"?>
<package>
  <name>uv_base</name>
  <version>0.0.4</version>
  <description>drone base</description>
  <maintainer email="kiminstein@naver.com">kissw</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>l
  <build_depend>geometry_msgs</build_depend>
  <build_depend>mavros</build_depend>
  <build_depend>mavros_extras</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>


  <run_depend>geometry_msgs</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_extras</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>